Resolves: tdf#104687 gtk2 paste cell text under a11y is fatal

Change-Id: Ia26ecf381e491b5591e05e0051b7162eb1d4bb56